--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <header>
         <h1>FoodBook</h1>
         <nav>
-            <button id="view-recipes-btn">Przepisy</button>
-            <button id="add-recipe-btn">Dodaj Przepis</button>
+            <button id="view-recipes-btn" class="BUTTON_BVY">Przepisy</button>
+            <button id="add-recipe-btn" class="BUTTON_BVY">Dodaj przepis</button>
+
         </nav>
     </header>
 
     <!-- Sekcja z listą kategorii -->
     <section id="category-section" class="hidden">
-        <h2>Wybierz Kategorię</h2>
+        <h2>Wybierz kategorię</h2>
         <button id="breakfast-btn">Śniadanie</button>
         <button id="lunch-btn">Obiad</button>
         <button id="dinner-btn">Kolacja</button>
@@ -34,7 +35,7 @@
 
     <!-- Sekcja dodawania przepisu -->
     <section id="add-recipe-section" class="hidden">
-        <h2>Dodaj Nowy Przepis</h2>
+        <h2>Dodaj nowy przepis</h2>
         <form id="recipe-form">
             <label for="name">Nazwa przepisu:</label>
             <input type="text" id="name" name="name" required><br>
@@ -53,7 +54,7 @@
                 <option value="4">Snack</option>
             </select><br>
 
-            <button type="submit">Dodaj Przepis</button>
+            <button type="submit">Dodaj przepis</button>
         </form>
     </section>
 
