--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
 </head>
 <body>
     <header>
-        <h1 id="foodbook-header">FoodBook</h1> <!-- Dodaj id, aby przypisać do niego event listener -->
+        <h1 id="foodbook-header">FoodBook</h1>
         <nav>
             <button id="view-recipes-btn" class="BUTTON_BVY">Przepisy</button>
             <button id="add-recipe-btn" class="BUTTON_BVY">Dodaj przepis</button>
         </nav>
     </header>
-    
 
-    <!-- Sekcja z listą kategorii -->
     <section id="category-section" class="hidden">
         <h2>Wybierz kategorię</h2>
         <button id="breakfast-btn">Śniadanie</button>
@@ -25,19 +23,16 @@
         <button id="snack-btn">Przekąska</button>
     </section>
 
-    <!-- Sekcja z listą przepisów -->
     <section id="recipes-section" class="hidden">
         <h2></h2>
         <ul id="recipes-list">
-            <!-- Lista przepisów wygenerowana przez JS -->
         </ul>
         <button id="back-to-categories-btn" class="hidden">Powrót do kategorii</button>
     </section>
 
-    <!-- Sekcja dodawania przepisu -->
     <section id="add-recipe-section" class="hidden">
         <h2>Dodaj nowy przepis</h2>
-        <form id="recipe-form">
+        <form id="recipe-form" enctype="multipart/form-data"> 
             <label for="name">Nazwa przepisu:</label>
             <input type="text" id="name" name="name" required><br>
 
@@ -45,7 +40,10 @@
             <textarea id="ingredients" name="ingredients" required></textarea><br>
 
             <label for="steps">Kroki przygotowania:</label>
-            <textarea id="steps" name="steps" required></textarea><br>
+            <div id="steps-container">
+                <textarea name="steps" placeholder="Krok 1" required></textarea>
+            </div>
+            <button type="button" id="add-step-btn">Dodaj krok</button><br>
 
             <label for="category">Kategoria:</label>
             <select id="category" name="category">
@@ -55,11 +53,15 @@
                 <option value="4">Snack</option>
             </select><br>
 
+            
+            <label for="recipe-image">Dodaj zdjęcie przepisu:</label>
+            <input type="file" id="recipe-image" name="image" accept="image/*" required><br>
+
+
             <button type="submit">Dodaj przepis</button>
         </form>
     </section>
 
-    <!-- Link do pliku JavaScript -->
     <script src="js/script.js"></script>
 </body>
 </html>
