--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1 id="foodbook-header">FoodBook</h1>
+        <h1 id="foodbook-header">
+            <span class="food">Food</span><span class="book">Book</span>
+        </h1>
         <nav>
             <button id="view-recipes-btn" class="BUTTON_BVY">Przepisy</button>
             <button id="add-recipe-btn" class="BUTTON_BVY">Dodaj przepis</button>
@@ -28,6 +30,7 @@
         <ul id="recipes-list">
         </ul>
         <button id="back-to-categories-btn" class="hidden">Powrót do kategorii</button>
+        <button id="back-to-recipes-btn" class="hidden">Powrót do listy przepisów</button>
     </section>
 
     <section id="add-recipe-section" class="hidden">
