all ok, register no alert

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             <button id="view-recipes-btn" class="BUTTON_BVY">Przepisy</button>
             <button id="add-recipe-btn" class="BUTTON_BVY">Dodaj przepis</button>
             
-                <button id="register-btn" class="BUTTON_BVY">Rejestracja</button>
-                <button id="login-btn" class="BUTTON_BVY">Logowanie</button>
-            </nav>
+            <button id="register-btn" class="BUTTON_BVY">Rejestracja</button>
+            <button id="login-btn" class="BUTTON_BVY">Logowanie</button>
+
+            <button id="logout-btn" class="hidden">Wyloguj</button>
+        </nav>
     </header>
 
     <section id="category-section" class="hidden">
