--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             
             <button id="register-btn" class="BUTTON_BVY">Rejestracja</button>
             <button id="login-btn" class="BUTTON_BVY">Logowanie</button>
-
+            
+            <span id="user-info" class="hidden">Zalogowany jako: użytkownik</span>
             <button id="logout-btn" class="hidden">Wyloguj</button>
         </nav>
     </header>
