--- a/index.html
+++ b/index.html
@@ -77,8 +77,13 @@
         <form id="register-form">
             <label for="register-username">Nazwa użytkownika:</label>
             <input type="text" id="register-username" name="username" required><br>
+
+            <label for="register-email">Email:</label> <!-- Dodajemy pole dla emaila -->
+            <input type="email" id="register-email" name="email" required><br>
+
             <label for="register-password">Hasło:</label>
             <input type="password" id="register-password" name="password" required><br>
+
             <button type="submit">Zarejestruj się</button>
         </form>
     </section>
@@ -86,8 +91,8 @@
     <section id="login-section" class="hidden">
         <h2>Zaloguj się</h2>
         <form id="login-form">
-            <label for="login-username">Nazwa użytkownika:</label>
-            <input type="text" id="login-username" name="username" required><br>
+            <label for="login-usernameOrEmail">Nazwa użytkownika lub Email:</label>
+            <input type="text" id="login-usernameOrEmail" name="usernameOrEmail" required><br>
 
             <label for="login-password">Hasło:</label>
             <input type="password" id="login-password" name="password" required><br>
