--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@
 
             <span id="user-info" class="hidden"></span>
             <button id="logout-btn" class="hidden">Wyloguj</button>
+
+            <button id="account-btn" class="hidden">Moje konto</button>
         </nav>
     </header>
+
+    <section id="account-section" class="hidden">
+        <h2>Moje konto</h2>
+        <button id="my-recipes-btn">Wyświetl moje przepisy</button>
+        <ul id="my-recipes-list">
+        </ul>
+    </section>
 
     <section id="category-section" class="hidden">
         <h2>Wybierz kategorię</h2>
