--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
         </ul>
         <button id="back-to-categories-btn" class="hidden">Powrót do kategorii</button>
         <button id="back-to-recipes-btn" class="hidden">Powrót do listy przepisów</button>
+        <h3>Komentarze:</h3>
+        <ul id="comments-list"></ul>
+        <div id="add-comment-section" class="hidden">
+            <h4>Dodaj komentarz</h4>
+            <form id="comment-form">
+                <label for="comment-content">Treść komentarza:</label>
+                <textarea id="comment-content" name="content" required></textarea><br>
+                
+                <label for="comment-rating">Ocena (1-5):</label>
+                <input type="number" id="comment-rating" name="rating" min="1" max="5" required><br>
+                
+                <button type="submit">Dodaj komentarz</button>
+            </form>
+        </div>
     </section>
 
     <section id="add-recipe-section" class="hidden">
