--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <h2>Moje konto</h2>
         <button id="my-recipes-btn">Wyświetl moje przepisy</button>
         <ul id="my-recipes-list">
+        <button id="back-to-my-recipes-btn" class="hidden">Powrót do moich przepisów</button>
         </ul>
     </section>
 
