new section in html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     </section>
 
     <section id="recipes-section" class="hidden">
+    <!-- content for listing recipes -->
+</section>
+
+<section id="recipe-details-section" class="hidden">
+    <!-- Ta sekcja będzie używana do wyświetlania szczegółów pojedynczego przepisu -->
+</section>
         <h2></h2>
         <ul id="recipes-list">
         </ul>
