--- a/index.html
+++ b/index.html
@@ -41,20 +41,15 @@
         <button id="snack-btn">Przekąska</button>
     </section>
 
-    <section id="recipes-section" class="hidden">
-    <!-- content for listing recipes -->
-</section>
-
-<section id="recipe-details-section" class="hidden">
-    <!-- Ta sekcja będzie używana do wyświetlania szczegółów pojedynczego przepisu -->
-</section>
+    <section id="recipes-section" class="hidden"></section>
+    <section>
         <h2></h2>
         <ul id="recipes-list">
         </ul>
         <button id="back-to-categories-btn" class="hidden">Powrót do kategorii</button>
         <button id="back-to-recipes-btn" class="hidden">Powrót do listy przepisów</button>
         <h3 id="comments-header" class="hidden">Komentarze:</h3>
-        <ul id="comments-list"></ul>
+        <ul id="comments-list" ></ul>
         <div id="add-comment-section" class="hidden">
             <h4>Dodaj komentarz</h4>
             <form id="comment-form">
@@ -123,7 +118,7 @@
             <label for="register-username">Nazwa użytkownika:</label>
             <input type="text" id="register-username" name="username" required><br>
 
-            <label for="register-email">Email:</label> <!-- Dodajemy pole dla emaila -->
+            <label for="register-email">Email:</label>
             <input type="email" id="register-email" name="email" required><br>
 
             <label for="register-password">Hasło:</label>
