--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <button id="back-to-categories-btn" class="hidden">Powrót do kategorii</button>
         <button id="back-to-recipes-btn" class="hidden">Powrót do listy przepisów</button>
         <h3 id="comments-header" class="hidden">Komentarze:</h3>
-        <ul id="comments-list" ></ul>
+        <ul id="comments-list" class="hidden" ></ul>
         <div id="add-comment-section" class="hidden">
             <h4>Dodaj komentarz</h4>
             <form id="comment-form">
