changes in styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1 id="foodbook-header">
             <span class="food">Food</span><span class="book">Book</span>
         </h1>
+        <h3 id="demo">Demo</h3>
         <nav>
             <button id="view-recipes-btn" class="BUTTON_BVY">Przepisy</button>
             <button id="add-recipe-btn" class="BUTTON_BVY">Dodaj przepis</button>
