--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <button id="snack-btn">Przekąska</button>
     </section>
 
-    <section id="recipes-section" class="hidden"></section>
-    <section>
+    <section id="myRecipes-section" class="hidden"></section>
+    <section id="allRecipes">
         <h2></h2>
         <ul id="recipes-list">
         </ul>
