--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
             <label for="register-password">Hasło:</label>
             <input type="password" id="register-password" name="password" required><br>
 
+            <label for="register-confirm-password">Potwierdź hasło:</label>
+            <input type="password" id="register-confirm-password" name="confirmPassword" required><br>
+
             <button type="submit">Zarejestruj się</button>
         </form>
     </section>
