--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FoodBook</title>
+    <meta name="description" content="FoodBook to strona, gdzie znajdziesz przepisy na każde danie. Zarejestruj się i dodaj własne przepisy lub odkryj nowe inspiracje kulinarne!">
+    <meta name="keywords" content="przepisy, jedzenie, kulinaria, gotowanie, FoodBook, przepisy kulinarne">
+    <title>FoodBook - Twoje ulubione przepisy kulinarne w jednym miejscu</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
