add contact info

--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@
         </form>
     </section>
 
+    <footer id="contact-footer">
+        <p>Kontakt:</p>
+        <p>Telefon: <a href="tel:+48123456789">+48 123 456 789</a></p>
+        <p>Email: <a href="mailto:kontakt@foodbook.com">kontakt@foodbook.com</a></p>
+    </footer>
+
 
     <script src="js/script.js"></script>
 </body>
