--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <h1 id="foodbook-header">
+            <a href="index.html" class="foodbook-link"></a>
             <span class="food">Food</span><span class="book">Book</span>
         </h1>
         <h3 id="demo">Demo</h3>
