add title to tag a

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 <body>
     <header>
         <h1 id="foodbook-header">
-            <a href="index.html" class="foodbook-link"></a>
-            <span class="food">Food</span><span class="book">Book</span>
+            <a href="index.html" class="foodbook-link" title="Przejdź na stronę główną FoodBook">
+                <span class="food">Food</span><span class="book">Book</span>
+            </a>
         </h1>
         <h3 id="demo">Demo</h3>
         <nav>
@@ -170,8 +171,8 @@
 
     <footer id="contact-footer">
         <p>Kontakt:</p>
-        <p>Telefon: <a href="tel:+48123456789">+48 123 456 789</a></p>
-        <p>Email: <a href="mailto:kontakt@foodbook.com">kontakt@foodbook.com</a></p>
+        <p>Telefon: <a href="tel:+48123456789" title="Zadzwoń na numer +48 123 456 789">+48 123 456 789</a></p>
+        <p>Email: <a href="mailto:kontakt@foodbook.com" title="Wyślij email na kontakt@foodbook.com">kontakt@foodbook.com</a></p>
     </footer>
 
 
